--- a/app/src/main/res/layout/criar_treino_layout.xml
+++ b/app/src/main/res/layout/criar_treino_layout.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="15dp"
         android:text="Criar treino"
         android:textColor="@color/Cor01"
         android:textSize="25sp"
@@ -145,7 +145,45 @@
             android:layout_weight="1"
             android:text="+" />
     </LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Quantidade de Peso:"
+        android:textColor="@color/Cor01"
+        android:textSize="15sp"
+        android:textStyle="bold" />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_menos3"
+            android:layout_width="0sp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="-" />
+
+        <EditText
+            android:id="@+id/txtQuantidadePeso"
+            android:layout_width="0sp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:inputType="number"
+            android:text="0"
+            android:textAlignment="center" />
+
+        <Button
+            android:id="@+id/btn_mais3"
+            android:layout_width="0sp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="+" />
+    </LinearLayout>
     <Button
         android:id="@+id/btnAdicionarExercicio"
         style="@style/Widget.Material3.Button.ElevatedButton"
