--- a/app/src/main/res/layout/fragment_exercicios.xml
+++ b/app/src/main/res/layout/fragment_exercicios.xml
@@ -1,175 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_marginHorizontal="10dp"
-    tools:context=".telasaluno.ExerciciosFragment"
-    android:background="@color/Cor04">
-
-    <FrameLayout
-        android:id="@+id/frameLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+    android:background="@color/Cor04"
+    tools:context=".telasaluno.ExerciciosFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginHorizontal="10dp"
         android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="36dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/saira"
-        android:text="Seus treinos:"
-        android:textSize="30sp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="36dp"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/saira"
+            android:text="Seus treinos:"
+            android:textColor="@color/Cor01"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:text="Treino ABC - Foco em Hipertrofia"
-        android:fontFamily="@font/saira"
-        android:textSize="20sp" />
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/CardViewSegunda"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/idRecyclerViewDiasDaSemana"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:clickable="true"
-            android:focusable="true">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
-                android:src="@drawable/duotone" />
-
-            <TextView
-                android:id="@+id/DiaSemana"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:fontFamily="@font/saira"
-                android:text="Segunda-Feira"
-                android:textColor="@color/white"
-                android:textSize="30sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="13dp"
-                android:layout_marginTop="45dp"
-                android:fontFamily="@font/saira"
-                android:text="Peito/Costas"
-                android:textColor="@color/white"
-                android:textSize="19sp" />
-
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/CardViewQuartaFeira"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:clickable="true"
-            android:focusable="true">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
-                android:src="@drawable/duotone" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:fontFamily="@font/saira"
-                android:text="Quarta-Feira"
-                android:textColor="@color/white"
-                android:textSize="30sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="13dp"
-                android:layout_marginTop="45dp"
-                android:fontFamily="@font/saira"
-                android:text="Pernas Completas"
-                android:textColor="@color/white"
-                android:textSize="19sp" />
-
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:clickable="true"
-            android:focusable="true">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
-                android:src="@drawable/duotone" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:fontFamily="@font/saira"
-                android:text="Sexta-Feira"
-                android:textColor="@color/white"
-                android:textSize="30sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="13dp"
-                android:layout_marginTop="45dp"
-                android:fontFamily="@font/saira"
-                android:text="Ombro/Tríceps"
-                android:textColor="@color/white"
-                android:textSize="19sp" />
-
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:clickable="true"
-            android:focusable="true">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
-                android:src="@drawable/duotone" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:fontFamily="@font/saira"
-                android:text="Sábado"
-                android:textColor="@color/white"
-                android:textSize="30sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="13dp"
-                android:layout_marginTop="45dp"
-                android:fontFamily="@font/saira"
-                android:text="Bíceps/Costas"
-                android:textColor="@color/white"
-                android:textSize="19sp" />
-
-        </com.google.android.material.card.MaterialCardView>
-
-
+            android:layout_height="match_parent"
+            android:layout_marginTop="15dp"
+            android:scrollbars="vertical" />
     </LinearLayout>
-    </FrameLayout>
-</LinearLayout>
+</FrameLayout>
