--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Cor04"
     android:orientation="vertical"
     tools:context=".telasaluno.HomeFragment">
 
@@ -48,9 +47,9 @@
         android:id="@+id/txtSeuIdPersonal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/saira"
         android:gravity="center"
-        android:layout_marginTop="10dp"
         android:text="Seu id de personal:"
         android:textColor="@color/Cor01"
         android:textSize="18sp"
@@ -60,16 +59,18 @@
         android:id="@+id/LinearLayoutCopiarID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_gravity="center_horizontal"
         android:gravity="center"
+        android:orientation="horizontal"
         android:visibility="gone">
 
         <TextView
             android:id="@+id/txtIdPersonal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="id Personal" />
+            android:text="id Personal"
+            android:textColor="@color/Cor01"
+            />
 
         <Button
             android:id="@+id/btnCopiar"
@@ -77,9 +78,40 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:icon="@drawable/baseline_content_copy" />
-
-
-
     </LinearLayout>
+
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_marginVertical="10dp"
+        android:layout_marginHorizontal="10dp">
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:background="@drawable/duotone">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Treine"
+                    android:textColor="#FFFFFF"
+                    android:textSize="60sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="BodyGym"
+                    android:textColor="#FFFFFF"
+                    android:textSize="20sp" />
+            </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
+
 
 </LinearLayout>
