--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".geral.PerfilFragment"
-    android:background="@color/Cor04">
+    tools:context=".geral.PerfilFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,19 +36,6 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-        <Button
-            android:id="@+id/meusDados"
-            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
-            android:layout_width="350dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:backgroundTint="@color/Cor01"
-            android:text="Meus dados"
-            android:textColor="@color/white"
-            app:icon="@drawable/baseline_search"
-            app:iconGravity="textStart"
-            app:iconTint="@color/white" />
 
         <Button
             android:id="@+id/sair"
