--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -5,8 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".telasaluno.HomeActivity"
-    android:background="@color/Cor04">
+    tools:context=".telasaluno.HomeActivity">
 
     
     <FrameLayout
