--- a/app/src/main/res/layout/modelo_exerciciotreino.xml
+++ b/app/src/main/res/layout/modelo_exerciciotreino.xml
@@ -12,7 +12,8 @@
     android:foreground="?android:attr/selectableItemBackground"
     app:cardBackgroundColor="@color/Cor04"
     app:strokeColor="@color/Cor02"
-    app:strokeWidth="3dp">
+    app:strokeWidth="3dp"
+    app:cardElevation="20dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
