--- a/app/src/main/res/layout/modelo_lista_alunos.xml
+++ b/app/src/main/res/layout/modelo_lista_alunos.xml
@@ -12,7 +12,8 @@
     app:strokeColor="@color/Cor02"
     app:strokeWidth="3dp"
     android:foreground="?android:attr/selectableItemBackground"
-    android:layout_marginTop="10dp">
+    android:layout_marginTop="10dp"
+    app:cardElevation="20dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
