--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -17,8 +17,9 @@
             android:layout_height="150dp"
             android:layout_gravity="center"
             android:layout_marginTop="50dp"
-            android:src="@drawable/cachorrofofoeasteregg"
+            android:src="@drawable/logo1"
             app:civ_border_color="@color/Cor02"
+            app:civ_circle_background_color="@color/Cor01"
             app:civ_border_width="5dp" />
 
         <TextView
