--- a/app/src/main/res/layout/tela_aluno_personal_layout.xml
+++ b/app/src/main/res/layout/tela_aluno_personal_layout.xml
@@ -23,7 +23,8 @@
                 android:layout_height="150dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="50dp"
-                android:src="@drawable/cachorrofofoeasteregg"
+                android:src="@drawable/logo1"
+                app:civ_circle_background_color="@color/Cor01"
                 app:civ_border_color="@color/Cor02"
                 app:civ_border_width="5dp"
                 tools:ignore="MissingConstraints" />
